Bug 54488 - sna corrupts titlebar
Summary: sna corrupts titlebar
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-04 11:03 UTC by Reinhard Karcher
Modified: 2012-09-14 19:33 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Corrupted title bar (1.25 KB, image/png)
2012-09-04 11:03 UTC, Reinhard Karcher
no flags Details
Correct title bar with uxa (951 bytes, image/png)
2012-09-04 11:05 UTC, Reinhard Karcher
no flags Details
Xorg.log using sna (31.52 KB, text/plain)
2012-09-04 11:06 UTC, Reinhard Karcher
no flags Details
Xorg.log using uxa (32.25 KB, text/plain)
2012-09-04 11:07 UTC, Reinhard Karcher
no flags Details
List of pci devices (1.83 KB, text/plain)
2012-09-04 11:08 UTC, Reinhard Karcher
no flags Details
xorg.conf to start uxa (142 bytes, text/plain)
2012-09-04 11:10 UTC, Reinhard Karcher
no flags Details

Description Reinhard Karcher 2012-09-04 11:03:53 UTC
Created attachment 66603 [details]
Corrupted title bar

xserver-xorg-video-intel corrupts the title bar in kde-windows if sna is used,
uxa is ok. Tested with version 2.20.5 from Debian experimental and latest git.
Comment 1 Reinhard Karcher 2012-09-04 11:05:24 UTC
Created attachment 66604 [details]
Correct title bar with uxa
Comment 2 Reinhard Karcher 2012-09-04 11:06:24 UTC
Created attachment 66605 [details]
Xorg.log using sna
Comment 3 Reinhard Karcher 2012-09-04 11:07:13 UTC
Created attachment 66606 [details]
Xorg.log using uxa
Comment 4 Reinhard Karcher 2012-09-04 11:08:23 UTC
Created attachment 66607 [details]
List of pci devices
Comment 5 Reinhard Karcher 2012-09-04 11:10:37 UTC
Created attachment 66608 [details]
xorg.conf to start uxa

For start using sna exchange the #
Comment 6 Chris Wilson 2012-09-04 11:22:51 UTC
It's a missing hardware flush and there are a huge number of variables you have not specified, such as compositing mode and exact theme, reproducibility rates and whether this is reproducible with drm-intel-next.
Comment 7 Reinhard Karcher 2012-09-04 11:47:30 UTC
Theme is Air, compositing mode Xrender and Opengl, reproducible nearly almost everytime.
drm-intel-next will take some time.
Comment 8 Reinhard Karcher 2012-09-04 12:11:35 UTC
No change with kernel from drm-intel-net or latest kernel from kernel.org and
xserver-xorg-video-intel from latest git.
Comment 9 Chris Wilson 2012-09-04 22:21:12 UTC
Ok, I have something funky with Air + Plastique. That looks to be something even more funky than the typical missing flush, though it feels like there is one of those as well...
Comment 10 Reinhard Karcher 2012-09-05 07:36:00 UTC
You where right about plastique, I did'nt have air but plastique.
Switching to modern or oxygen removed the problem.
Comment 11 Chris Wilson 2012-09-05 08:24:34 UTC
As of commit 913adacc5400f94bc754f22375447e6f90ccd510
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Sep 5 09:20:55 2012 +0100

    sna/gen7: Always emit a stall when flushing the texture cache
    
    Reported-by: Reinhard Karcher <reinhard.karcher@gmx.net>
    References: https://bugs.freedesktop.org/show_bug.cgi?id=54488
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

I'm seeing much rarer corruption in the titlebar, certainly the form you observed should be eliminated. What I'm still occasionally seeing looks like fallback rendering going astray along the window edge.
Comment 12 Reinhard Karcher 2012-09-05 08:36:05 UTC
Yes, I can't reproduce the title bar corruption. I have seen the window edge corruption only once.
Comment 13 Chris Wilson 2012-09-05 08:56:48 UTC
Yes, the issue I see is much, much harder to reproduce with compositing enabled, which implies a really evil bug hiding somewhere in the depths of state/damage management.
Comment 14 Chris Wilson 2012-09-14 19:33:05 UTC
No longer able to reproduce the damage around the Plastique edges.

commit d995705fb01842652a79076cbecee4392f653bfe
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Sep 14 19:32:06 2012 +0100

    sna: Only discard CPU damage if we completely overwrite its extents
    
    If we are performing a clipped copy, then we must be careful not to
    completely discard the CPU damage as it may not be entirely replaced.
    
    Reported-by: Roman Jarosz <kedgedev@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=54937
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

is the most likely candidate.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.